OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.2.0 (2018-02-??)
------------------
- ALL: Rename AcumulusEntryModel naar AcumulusEntryManager.
- ALL: Als er een bedrag mist wordt er nu een waarschuwing en, indien mogelijk,
  een correctieregel toegvoegd. Dit kan gebeuren als bv een betaalmodule die
  (nog) niet door ons wordt ondersteund een betaalfee toevoegt.
- ALL: een 0-factuur kon bij een aantal shops leiden tot een onterechte
  waarschuwing en dus een concept-factuur. Deze situatie wordt nu beter
  aangepakt waardoor de waarschuwing niet meer gegeven zal worden.
- ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail. Ook de
  waarschuwing bij geforceerd verzenden is aangepast.
- ALL: Het te gebruiken factuursjabloon wordtnu pas bepaald na het invoice_created
  event zodat het eventueel corrigeren van de betaalstatus in dat event doorwerkt
  in de factuursjabloon keuze.
- ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
- ALL: fouten en waarschuwingen van een ander API request (vooralsnog opvragen
  btw tarieven en verwijderen oude entry) worden toegvoegd aan het
  overall resultaat van de hoofdbewerking (add invoice).
- ALL: toegang op veldniveau tot acumulus entry records is nu beter geregeld.
- ALL: A number of API calls have been added:
  * Set Delete Status: https://siel.nl/acumulus/API/Entry/Set_Delete_Status/
  * Get Entry (Boeking) Details: https://siel.nl/acumulus/API/Entry/Get_Entry_Details/
  * Payment - Get status: https://siel.nl/acumulus/API/Invoicing/Payment_Get_Status/
  * Payment - Set status: https://siel.nl/acumulus/API/Invoicing/Payment_Set_Status/