@@ -26,7 +26,7 @@ class Translations extends TranslationCollection
         'inc_vat' => 'incl. btw',
         'ex_vat' => 'excl. btw',
         'shipping_costs' => 'Verzendkosten',
-        // @todo: try to better distinguish free shipping and pickup: for now only WC, HS PS do so
+        // @todo: try to better distinguish free shipping and pickup: for now only WC, HS, and PS do so
         'free_shipping' => 'Gratis verzending',
         'pickup' => 'Afhalen',
         'payment_costs' => 'Betalingskosten',
@@ -42,14 +42,14 @@ class Translations extends TranslationCollection
         'discount_adjustment' => 'Handmatige korting',
 
         'message_warning_no_email' => 'De factuur bevat geen e-mailadres van de klant. Hierdoor kan er geen relatie in Acumulus aangemaakt of bijgewerkt worden. U kunt zelf in Acumulus een andere relatie aan deze factuur koppelen.',
-        'message_warning_no_vat' => 'De factuur bevat geen btw en er kan niet bepaald worden welk factuurtype (https://wiki.acumulus.nl/index.php?page=127) van toepassing is. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus en controleer uw btw instellingen.',
-        'message_warning_no_vattype' => 'Door een fout in uw instellingen of btw tarieven, kan het factuurtype (https://wiki.acumulus.nl/index.php?page=127) niet bepaald worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus.',
-        'message_warning_line_without_vat' => 'Één of meer van de factuurregels hebben geen btw terwijl is ingesteld dat er "Alleen aan btw onderhevige producten en/of diensten." aangeboden worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus en controleer uw instellingen.',
-        'message_warning_strategies_failed' => 'Door een fout in uw instellingen of btw tarieven, konden niet alle fatuurregels correct gecompleteerd worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus.',
-        'message_warning_multiple_vattype_must_split' => 'De factuur heeft meerdere factuurtypes (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. Splits de factuur in Acumulus en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
-        'message_warning_multiple_vattype_may_split' => 'De factuur kan meerdere factuurtypes hebben (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. Controleer het btw type van de factuur in Acumulus en corrigeer deze indien nodig, of splits de factuur en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
-        'message_warning_missing_amount_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
-        'message_warning_missing_amount_not_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
+        'message_warning_no_vat' => 'De factuur bevat geen btw en er kan niet bepaald worden welk factuurtype (https://wiki.acumulus.nl/index.php?page=127) van toepassing is. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur en controleer uw btw instellingen.',
+        'message_warning_no_vattype' => 'Door een fout in uw instellingen of btw tarieven, kan het factuurtype (https://wiki.acumulus.nl/index.php?page=127) niet bepaald worden. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur in Acumulus.',
+        'message_warning_line_without_vat' => 'Één of meer van de factuurregels hebben geen btw terwijl is ingesteld dat er "Alleen aan btw onderhevige producten en/of diensten." aangeboden worden. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur in Acumulus en controleer uw instellingen.',
+        'message_warning_strategies_failed' => 'Door een fout in uw instellingen of btw tarieven, konden niet alle fatuurregels correct gecompleteerd worden. Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Corrigeer daar de factuur in Acumulus.',
+        'message_warning_multiple_vattype_must_split' => 'De factuur heeft meerdere factuurtypes (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Splits daar de factuur en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
+        'message_warning_multiple_vattype_may_split' => 'De factuur kan meerdere factuurtypes hebben (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer daar het btw type van de factuur en corrigeer deze indien nodig, of splits de factuur en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
+        'message_warning_missing_amount_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer en corrigeer daar de factuur.',
+        'message_warning_missing_amount_not_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. In Acumulus zijn deze onder "Overzichten » Concept-facturen / offertes" terug te vinden. Controleer en corrigeer daar de factuur.',
         'amount_ex' => 'bedrag (ex. btw)',
         'amount_inc' => 'bedrag (incl. btw)',
         'amount_vat' => 'btw-bedrag',
@@ -97,8 +97,6 @@ class Translations extends TranslationCollection
         'message_warning_strategies_failed' => 'Due to an error in your settings or VAT rates, we could not complete all invoice lines correctly. The invoice has been saved as concept. Correct the invoice in Acumulus.',
         'message_warning_multiple_vattype_must_split' => 'The invoice has multiple invoice types (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Split the invoice in Acumulus and divide the invoice lines over both invoices based on the VAT type the line belongs to.',
         'message_warning_multiple_vattype_may_split' => 'The invoice can have multiple invoice types (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Check the VAT type of the invoice in Acumulus and correct if necessary, or split the invoice and divide the invoice lines over both invoices based on the VAT type the line belongs to.',
-        'message_warning_missing_amount_adde1' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
-        'message_warning_missing_amount_not_adde1' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
         'message_warning_missing_amount_added' => 'The invoice total does not match with the lines total. Therefore a corrective line was added with an amount (ex. vat) of €%1$.2f and a vat amount of €%2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
         'message_warning_missing_amount_not_added' => 'The invoice total does not match with the lines total. The %1$s differs with €2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
         'amount_ex' => 'amount (ex. vat)',
