@@ -19,7 +19,8 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.2.0 (2018-02-??)
 ------------------
-- ALL: Rename AcumulusEntryModel naar AcumulusEntryManager.
+- ALL: Als een factuur als concept wordt ogeslagen voeg dan een verwijzing naar
+  waar deze te vinden toe aan de waarschuwingstekst.
 - ALL: Als er een bedrag mist wordt er nu een waarschuwing en, indien mogelijk,
   een correctieregel toegvoegd. Dit kan gebeuren als bv een betaalmodule die
   (nog) niet door ons wordt ondersteund een betaalfee toevoegt.
@@ -29,7 +30,7 @@ WC3 = WooCommerce 3 (WordPress)
 - ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
   boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail. Ook de
   waarschuwing bij geforceerd verzenden is aangepast.
-- ALL: Het te gebruiken factuursjabloon wordtnu pas bepaald na het invoice_created
+- ALL: Het te gebruiken factuursjabloon wordt nu pas bepaald na het invoice_created
   event zodat het eventueel corrigeren van de betaalstatus in dat event doorwerkt
   in de factuursjabloon keuze.
 - ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
@@ -37,6 +38,7 @@ WC3 = WooCommerce 3 (WordPress)
   btw tarieven en verwijderen oude entry) worden toegvoegd aan het
   overall resultaat van de hoofdbewerking (add invoice).
 - ALL: toegang op veldniveau tot acumulus entry records is nu beter geregeld.
+- ALL: Rename AcumulusEntryModel naar AcumulusEntryManager.
 - ALL: A number of API calls have been added:
   * Set Delete Status: https://siel.nl/acumulus/API/Entry/Set_Delete_Status/
   * Get Entry (Boeking) Details: https://siel.nl/acumulus/API/Entry/Get_Entry_Details/
